--- a/public/style.css
+++ b/public/style.css
@@ -86,3 +86,31 @@ main {
     background-color: #ffcc00; /* Color llamativo al marcar */
     color: #333;
 }
+.card-number {
+    display: inline-block;
+    width: 40px;
+    height: 40px;
+    line-height: 40px;
+    margin: 3px;
+    text-align: center;
+    border: 1px solid #333;
+    border-radius: 5px;
+    cursor: pointer;
+    transition: background 0.2s;
+}
+
+.marked-number {
+    background-color: #4CAF50;
+    color: white;
+}
+
+.highlight-number {
+    background-color: #FF5722;
+    color: white;
+}
+
+.called-number {
+    font-weight: bold;
+    color: #FF5722;
+    margin-right: 5px;
+    }
